feat: complete dockerization refactoring and dynamic env vars